--- a/src/app/utils/data-structure-selector/data-structure-selector.component.html
+++ b/src/app/utils/data-structure-selector/data-structure-selector.component.html
@@ -1,5 +1,5 @@
 <div class="selector-options d-flex align-items-center">
-    <div class="d-flex flex-column rounded border">
+    <div class="d-flex flex-column rounded border bg-white">
         <div *ngIf="format && format._id" class="selected-format-name d-flex align-items-center border-bottom">
             <span class="label px-2 py-1 text-secondary font-12 fw-500 border-right">Name</span>
             <span class="value px-2 py-1 text-primary fw-400">{{format.name}}</span>
