--- a/src/app/home/b2b-flows/b2b-flows.component.html
+++ b/src/app/home/b2b-flows/b2b-flows.component.html
@@ -15,9 +15,9 @@
         <div class="d-flex align-items-center">
             <odp-search-box (enteredText)="searchTerm=$event" (reset)="searchTerm=null"></odp-search-box>
             <button type="button" id="data-management" class="btn btn-white d-flex align-items-center border ml-3"
-            [routerLink]="['settings']" >
-            <span class="dsi dsi-settings text-secondary"></span>
-          </button>
+                [routerLink]="['settings']">
+                <span class="dsi dsi-settings text-secondary"></span>
+            </button>
             <button id="createFlow" type="button" class="add-new btn btn-primary ml-3 d-flex align-items-center"
                 (click)="newFlow()" [disabled]="!hasWritePermission('FLOW')">
                 <span class="dsi dsi-plus mr-2"></span>
@@ -104,7 +104,8 @@
                                     *ngIf="item.status !== 'Active' && canStartStopFlow(i)"
                                     (click)="toggleFlowStatus(i)">Start</span> -->
                                 <span class="fw-600 font-13 hover mr-3" *ngIf="canStartStopFlow(i)"
-                                    (click)="toggleFlowStatus(item)">{{item.status === 'Active' ? 'Stop' : 'Start'}}</span>
+                                    (click)="toggleFlowStatus(item)">{{item.status === 'Active' ? 'Stop' :
+                                    'Start'}}</span>
                                 <span class="dsi dsi-more-vertical hover mr-3 ignore-outside"
                                     (click)="showDropDown($event,i)"></span>
                             </ng-container>
@@ -125,7 +126,8 @@
                                     Clone
                                 </div>
                                 <button class="list-group-item list-group-item-action py-2 border-0"
-                                    *ngIf="item.draftVersion || item.status=='Draft' && canManageFlow(item._id)" (click)="discardDraft(item._id)">Discard
+                                    *ngIf="item.draftVersion || item.status=='Draft' && canManageFlow(item._id)"
+                                    (click)="discardDraft(item._id)">Discard
                                     Draft</button>
                                 <div class="list-group-item list-group-item-action py-2 border-0 text-danger"
                                     *ngIf="canManageFlow(item._id)" (click)="deleteFlow(i)">
@@ -182,26 +184,27 @@
                 <label>
                     <input class="mr-3" type="radio" value="API" formControlName="type"
                         [checked]="form.get('type').value === 'API'">
-                    <span>API</span>
+                    <span>HTTP API Reciever</span>
                 </label>
                 <label>
                     <input class="mr-3" type="radio" value="FILE" formControlName="type"
                         [checked]="form.get('type').value === 'FILE'">
-                    <span>FILE</span>
+                    <span>Agent File Reciever</span>
                 </label>
                 <label>
                     <input class="mr-3" type="radio" value="TIMER" formControlName="type"
                         [checked]="form.get('type').value === 'TIMER'">
-                    <span>TIMER</span>
+                    <span>Timer</span>
+                </label>
+                <label>
+                    <input class="mr-3" type="radio" value="PLUGIN" formControlName="type"
+                        [checked]="form.get('type').value === 'PLUGIN'">
+                    <span>Plugin</span>
                 </label>
             </div>
-
-            <!-- <select class="form-control" id="name" formControlName="type">
-                <option value="API" selected>API</option>
-                <option value="FILE">FILE</option>
-                <option value="TIMER">TIMER</option>
-            </select> -->
-
+            <div *ngIf="form.get('type').value === 'PLUGIN'" class="form-group">
+                <input type="text" class="form-control" placeholder="Search Plugin">
+            </div>
         </div>
     </div>
     <div class="d-flex align-self-end justify-content-end w-100 mt-auto">
