--- a/src/app/home/b2b-flows-manage/node-properties/node-mapping/source-fields/source-fields.component.scss
+++ b/src/app/home/b2b-flows-manage/node-properties/node-mapping/source-fields/source-fields.component.scss
@@ -22,7 +22,7 @@
 
     .attribute-type-holder,
     .attribute-name-holder {
-        min-height: 48px;
+        // min-height: 48px;
         max-height: 48px;
         word-break: break-all;
     }
