--- a/src/app/home/b2b-flows-manage/node-properties/node-mapping/target-fields/target-fields.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-mapping/target-fields/target-fields.component.html
@@ -8,7 +8,7 @@
             <i class="text-success">fn()</i>
         </div>
         <div class="attribute-type-holder d-flex align-items-center justify-content-center">
-            <odp-field-type [field]="definition"></odp-field-type>
+            <odp-field-type [field]="definition" [onMapper]="true"></odp-field-type>
         </div>
         <div class="attribute-name-holder d-flex align-items-center text-wrap pr-2">{{definition.dataPath}}</div>
     </div>
