--- a/src/app/home/b2b-flows-manage/node-properties/node-mapping/source-fields/source-fields.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-mapping/source-fields/source-fields.component.html
@@ -1,7 +1,7 @@
 <div class="field-wrapper border rounded">
     <div class="field-row d-flex align-items-center mb-1">
         <div class="attribute-type-holder d-flex align-items-center justify-content-center">
-            <odp-field-type [field]="definition"></odp-field-type>
+            <odp-field-type [field]="definition" [onMapper]="true"></odp-field-type>
         </div>
         <div class="attribute-name-holder d-flex align-items-center text-wrap pr-2 flex-fill">
             {{definition.properties.name}}
