--- a/src/app/home/b2b-flows-manage/node-properties/node-mapping/target-fields/target-fields.component.scss
+++ b/src/app/home/b2b-flows-manage/node-properties/node-mapping/target-fields/target-fields.component.scss
@@ -2,6 +2,10 @@
 @import "src/assets/scss/bootstrap/_variables.scss";
 
 .field-block {
+    min-width: 348px;
+    resize: horizontal;
+    overflow-x: auto;
+
     .field-anchor {
         min-height: 12px;
         max-height: 12px;
@@ -10,6 +14,7 @@
         border-radius: 4px;
         margin-left: -6px;
         background: $white;
+        position: absolute;
 
         &:hover {
             background: $secondary;
@@ -23,7 +28,7 @@
     .function-holder,
     .attribute-type-holder,
     .attribute-name-holder {
-        min-height: 48px;
+        // min-height: 48px;
         max-height: 48px;
         word-break: break-all;
     }
