Set mapping changes 2

--- a/src/app/home/b2b-flows-manage/node-properties/node-mapping/source-selector/source-selector.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-mapping/source-selector/source-selector.component.html
@@ -18,7 +18,7 @@
 
     <div>
         <div class="mb-2 fw-500 text-secondary font-12 d-flex align-items-center justify-content-between">
-            <span class="text">Outgoing</span>
+            <!-- <span class="text">Outgoing</span> -->
             <span class="dsi hover dsi-drop-down" (click)="toggle['outgoing']=!toggle['outgoing'];reCreatePaths()"
                 [class.fa-rotate-90]="!toggle['outgoing']" [attr.data-id]="node._id"></span>
         </div>
