--- a/src/app/home/b2b-flows-manage/node-properties/node-mapping/node-mapping.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-mapping/node-mapping.component.html
@@ -115,9 +115,9 @@
             <svg #svgCanvas class="mapping-paths" [ngStyle]="svgStyle" (click)="selectedPath=null;">
                 <g *ngFor="let p of pathList;let i=index;">
                     <path class="transparent-path no-outline" [attr.d]="p.path" (click)="selectPath($event,p,i)"
-                        tabindex="0" (keydown.delete)="deletePath($event,p,i)" />
+                        [tabindex]="i" (keydown.delete)="deletePath($event,p,i)" />
                     <path [class.selected]="isPathSelected(p)" [attr.d]="p.path" (click)="selectPath($event,p,i)"
-                        class="no-outline" tabindex="0" (keydown.delete)="deletePath($event,p,i)" />
+                        class="no-outline" [tabindex]="i" (keydown.delete)="deletePath($event,p,i)" />
                     <g *ngIf="isPathSelected(p)" [ngStyle]="getDeleteIconStyle(p)">
                         <rect x="0" y="0" width="18" height="18" rx="6" class="delete-rect"
                             (click)="deletePath($event,p,i)" />
