--- a/src/app/home/b2b-flows-manage/node-properties/node-mapping/target-fields/target-fields.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-mapping/target-fields/target-fields.component.html
@@ -1,8 +1,11 @@
 <div class="field-wrapper">
-    <div class="field-block d-flex align-items-center border rounded mb-1">
+    <div class="field-block d-flex align-items-center border rounded mb-1"
+        [ngStyle]="{'margin-left': definition.depth*10 +'px'}">
         <div class="field-anchor d-flex align-items-center justify-content-center border hover"
             [class.selected]="isSelected" [attr.data-path]="definition.properties.dataPath"
-            [attr.data-id]="definition._id" (click)="selectField($event)"></div>
+            [attr.data-id]="definition._id" (click)="selectField($event)"
+            [ngStyle]="{'min-width': (definition.depth+1)*10+'px', 'margin-left' : (definition.depth+1) * -6 + 'px' }">
+        </div>
         <div class="function-holder d-flex align-items-center justify-content-center border-right hover underline"
             (click)="showFormulaEditor()">
             <i class="text-success">fn()</i>
@@ -11,6 +14,10 @@
             <odp-field-type [field]="definition" [onMapper]="true"></odp-field-type>
         </div>
         <div class="attribute-name-holder d-flex align-items-center text-wrap pr-2">{{definition.dataPath}}</div>
+        <div *ngIf="sources" class="attribute-name-holder d-flex align-items-center text-wrap pr-2 text-secondary">{{'('
+            + sources +
+            ')'}}
+        </div>
     </div>
 </div>
 
