--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -91,6 +91,9 @@
     <span class="d-flex align-items-center px-4 fw-400 item hover" *ngIf="isSuperAdmin">
       <span routerLinkActive="active" routerLink="metadata/node" class="text">Plugins</span>
     </span>
+    <span class="d-flex align-items-center px-4 fw-400 item hover" *ngIf="isSuperAdmin">
+      <span routerLinkActive="active" routerLink="metadata/npm" class="text">NPM Libraries</span>
+    </span>
   </div>
   <!-- <div #agentActive="routerLinkActive" class="d-flex align-items-center px-3 item hover" routerLinkActive="active"
       routerLink="integration">
