--- a/src/app/home/b2b-flows-manage/node-properties/node-mapping/target-fields/target-fields.component.scss
+++ b/src/app/home/b2b-flows-manage/node-properties/node-mapping/target-fields/target-fields.component.scss
@@ -39,3 +39,9 @@
         max-width: 48px;
     }
 }
+
+.input-height {
+    min-height: 300px;
+    max-height: 300px;
+    word-break: break-all;
+}
