--- a/src/app/utils/styled-text/styled-text.component.scss
+++ b/src/app/utils/styled-text/styled-text.component.scss
@@ -15,7 +15,7 @@
     border: 1px solid grey;
     border-radius: 4px;
     // width: 260px;
-    height: 32px;
+    // height: 32px;
     position: relative;
     margin-right: 1px;
 }
@@ -27,7 +27,7 @@
     inset: 0;
     z-index: 1;
     outline: none;
-    padding: 0 0.5rem;
+    padding: 0 10px;
     background: transparent;
 }
 
@@ -36,7 +36,7 @@
     height: 250px;
     background: transparent;
     z-index: 1;
-    margin: 0 0 0 0.5rem;
+    margin: 0 0 0 10px;
     outline: 0px solid transparent;
 }
 
@@ -76,8 +76,8 @@
 
 
 .input-height {
-    min-height: calc(100vh - 352px);
-    max-height: calc(100vh - 352px);
+    min-height: 150px;
+    max-height: 150px;
     word-break: break-all;
     // font-family: 'Courier New', Courier, monospace;
 }
