--- a/src/app/home/b2b-flows-manage/node-properties/node-properties.component.scss
+++ b/src/app/home/b2b-flows-manage/node-properties/node-properties.component.scss
@@ -17,8 +17,9 @@
 }
 
 .node-mapping-window {
-    right: -60vw;
-    width: 60vw;
+    right: -80vw;
+    max-width: 80vw;
+    width: auto;
 }
 
 .node-agent-window {
