--- a/src/app/home/b2b-flows-manage/node-properties/node-mapping/node-mapping.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-mapping/node-mapping.component.html
@@ -16,44 +16,44 @@
                 <span>Clear Mappings</span>
             </button>
         </div>
-
-        <div id="methods" class="method-list ml-3" *ngIf="availableMethods.length> 0">
-            <div class="border rounded d-flex">
-                <span class="text-muted form-text p-2">Available Methods</span>
-                <span class="dsi hover dsi-drop-down method-drop" (click)="showMethodList = !showMethodList"
-                    [class.fa-rotate-90]="showMethodList"></span>
-            </div>
-            <div class="suggestion-list border rounded" *ngIf="showMethodList">
-                <div class="list-group list-group-flush">
-                    <div *ngFor="let item of availableMethods"
-                        class="list-group-item font-12 d-flex align-items-center justify-content-start">
-                        <span class="dsi dsi-plus-circle hover text-dark mr-2" (click)="placeMethod(item)"></span>
-                        <div class="d-flex align-items-center">
-                            <span class="name text-accent fw-500">{{item.name}}</span>(
-                            <ng-container *ngFor="let p of item.params;let lp=last">
-                                <span class="text-success" *ngIf="p.type == 'String'">"{{p.name}}"</span>
-                                <span class="text-warning" *ngIf="p.type == 'Number'">{{p.name}}</span>
-                                <span class="text-info" *ngIf="p.type == 'Boolean'">{{p.name}}</span>
-                                <span class="text-grey" *ngIf="p.type == 'Object'">{{'{ '+p.name+' }'}}</span>
-                                <span class="text-grey" *ngIf="p.type == 'Array'">{{'[ '+p.name+' ]'}}</span>
-                                <span *ngIf="!lp">,&nbsp;</span>
-                            </ng-container>
-                            )&nbsp;:&nbsp;
-                            <span [ngClass]="getDataTypeStyleClass(item.returnType)">{{item.returnType}}</span>
+        <div class="d-flex">
+            <div id="methods" class="method-list ml-3 mt-4 hide" *ngIf="showToggleArray">
+                <div class="border rounded d-flex">
+                    <span class="text-muted form-text p-2">Available Methods</span>
+                    <span class="dsi hover dsi-drop-down method-drop" (click)="showMethodList = !showMethodList"
+                        [class.fa-rotate-90]="showMethodList"></span>
+                </div>
+                <div class="suggestion-list border rounded" *ngIf="showMethodList">
+                    <div class="list-group list-group-flush">
+                        <div *ngFor="let item of availableMethods"
+                            class="list-group-item font-12 d-flex align-items-center justify-content-start">
+                            <span class="dsi dsi-plus-circle hover text-dark mr-2" (click)="placeMethod(item)"></span>
+                            <div class="d-flex align-items-center">
+                                <span class="name text-accent fw-500">{{item.name}}</span>(
+                                <ng-container *ngFor="let p of item.params;let lp=last">
+                                    <span class="text-success" *ngIf="p.type == 'String'">"{{p.name}}"</span>
+                                    <span class="text-warning" *ngIf="p.type == 'Number'">{{p.name}}</span>
+                                    <span class="text-info" *ngIf="p.type == 'Boolean'">{{p.name}}</span>
+                                    <span class="text-grey" *ngIf="p.type == 'Object'">{{'{ '+p.name+' }'}}</span>
+                                    <span class="text-grey" *ngIf="p.type == 'Array'">{{'[ '+p.name+' ]'}}</span>
+                                    <span *ngIf="!lp">,&nbsp;</span>
+                                </ng-container>
+                                )&nbsp;:&nbsp;
+                                <span [ngClass]="getDataTypeStyleClass(item.returnType)">{{item.returnType}}</span>
+                            </div>
                         </div>
-                    </div>
-                    <!-- <div *ngIf="(availableMethods|commonFilter:'name':searchTerm).length==0"
+                        <!-- <div *ngIf="(availableMethods|commonFilter:'name':searchTerm).length==0"
                     class="list-group-item d-flex align-items-center justify-content-between">
                     <span class="text-muted">No Match Found</span>
                 </div> -->
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="mapping-box d-flex align-items-stretch p-4">
-            <div class="source-list">
-                <ng-container *ngFor="let node of nodeList;let i=index">
-                    <div *ngIf="node._id!=currNode._id" class="border mb-3 rounded p-2">
-                        <!-- <div>
+            <div class="mapping-box d-flex align-items-stretch p-4">
+                <div class="source-list">
+                    <ng-container *ngFor="let node of nodeList;let i=index">
+                        <div *ngIf="node._id!=currNode._id" class="border mb-3 rounded p-2">
+                            <!-- <div>
                             <div *ngIf="node.type=='FILE'"
                                 class="node-item border-bottom pb-2 mb-2 d-flex align-items-center hover ">
                                 <span class="node-icon font-16 fw-400 dsi dsi-file mr-2"></span>
@@ -140,32 +140,34 @@
                                 <span class="font-13 fw-400 text-secondary">Plugin</span>
                             </div>
                         </div> -->
-                        <div class="font-14 fw-500 mb-2">{{node.name}}</div>
-                        <odp-source-selector [nodeList]="nodeList" [index]="i"></odp-source-selector>
-                    </div>
-                </ng-container>
-            </div>
-            <svg #svgCanvas class="mapping-paths" [ngStyle]="svgStyle" (click)="selectedPath=null;">
-                <g *ngFor="let p of pathList;let i=index;">
-                    <path class="transparent-path no-outline" [attr.d]="p.path" (click)="selectPath($event,p,i)"
-                        [tabindex]="i" (keydown.delete)="deletePath($event,p,i)" />
-                    <path [class.selected]="isPathSelected(p)" [attr.d]="p.path" (click)="selectPath($event,p,i)"
-                        class="no-outline" [tabindex]="i" (keydown.delete)="deletePath($event,p,i)" />
-                    <g *ngIf="isPathSelected(p)" [ngStyle]="getDeleteIconStyle(p)">
-                        <rect x="0" y="0" width="18" height="18" rx="6" class="delete-rect"
-                            (click)="deletePath($event,p,i)" />
-                        <foreignObject x="0" y="3" width="18" height="18">
-                            <span xmlns="http://www.w3.org/1999/xhtml" (click)="deletePath($event,p,i)"
-                                class="text-wrap d-flex justify-content-center text-center hover font-10 dsi dsi-trash text-danger"></span>
-                        </foreignObject>
-                    </g>
+                            <div class="font-14 fw-500 mb-2">{{node.name}}</div>
+                            <odp-source-selector [nodeList]="nodeList" [index]="i"></odp-source-selector>
+                        </div>
+                    </ng-container>
+                </div>
+                <svg #svgCanvas class="mapping-paths" [ngStyle]="svgStyle" (click)="selectedPath=null;">
+                    <g *ngFor="let p of pathList;let i=index;">
+                        <path class="transparent-path no-outline" [attr.d]="p.path" (click)="selectPath($event,p,i)"
+                            [tabindex]="i" (keydown.delete)="deletePath($event,p,i)" />
+                        <path [class.selected]="isPathSelected(p)" [attr.d]="p.path" (click)="selectPath($event,p,i)"
+                            class="no-outline" [tabindex]="i" (keydown.delete)="deletePath($event,p,i)" />
+                        <g *ngIf="isPathSelected(p)" [ngStyle]="getDeleteIconStyle(p)">
+                            <rect x="0" y="0" width="18" height="18" rx="6" class="delete-rect"
+                                (click)="deletePath($event,p,i)" />
+                            <foreignObject x="0" y="3" width="18" height="18">
+                                <span xmlns="http://www.w3.org/1999/xhtml" (click)="deletePath($event,p,i)"
+                                    class="text-wrap d-flex justify-content-center text-center hover font-10 dsi dsi-trash text-danger"></span>
+                            </foreignObject>
+                        </g>
 
-                </g>
-            </svg>
-            <div class="target-list">
-                <div *ngFor="let item of allTargets;let i=index">
-                    <odp-target-fields [allSources]="allSources" [definition]="item" [index]="i"
-                        [currNode]="currNode"></odp-target-fields>
+                    </g>
+                </svg>
+                <div class="target-list">
+                    <div *ngFor="let item of allTargets;let i=index">
+                        <odp-target-fields [allSources]="allSources" [definition]="item" [index]="i"
+                            [currNode]="currNode" (toggleFn)="toggleFn($event)" [toggleValue]="toggleArray[i]"
+                            [insertText]="insertText"></odp-target-fields>
+                    </div>
                 </div>
             </div>
         </div>
