--- a/src/app/home/b2b-flows-manage/node-properties/node-mapping/node-mapping.component.scss
+++ b/src/app/home/b2b-flows-manage/node-properties/node-mapping/node-mapping.component.scss
@@ -7,6 +7,8 @@
         max-height: calc(100vh - 204px);
         overflow-y: auto;
 
+        width: 60vw;
+
         .source-list {
             width: 300px;
         }
@@ -64,16 +66,20 @@ path {
 }
 
 .suggestion-list {
-    width: 400px;
-    max-width: 400px;
-    max-height: 150px;
+    width: 300px;
+    max-width: 300px;
+    max-height: 300px;
     overflow: auto;
 }
 
 .method-list {
-    width: 400px;
+    width: 300px;
 }
 
 .method-drop {
     margin: auto 0 auto auto;
+}
+
+.list-group-item {
+    padding: 0.75rem 0.5rem;
 }
